--- a/atividade1.html
+++ b/atividade1.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Minha primeira página</title>
 </head>
-<body>
+<body style="margin: 0; text-align: center;">
+  <img src="/image/capa.jpg" alt="foto de código" style="display: flex; width: 80%; justify-self: center; margin-top: 5px;">
   <h1>Jonatas de Assis</h1>
 
   <h2>Formação</h2>
